# UI_in_Python

./: .gitignore  main.py  pyproject.toml  requirements.txt
try/: dearpygui_try.py  flet_try.py  gooey_try.py  justpy_try.py  nicegui_try.py  pywebview_try.py  remi_try.py  textual_try.py  toga_try.py
try/descope_auth/: user.py
try/descope_auth/.nicegui/: storage-user-539cefb3-3e30-47d6-8fb4-a2c598f54625.json
try/eel/: eel_try.py  index.html
